--- a/AboutPage.xaml
+++ b/AboutPage.xaml
@@ -11,7 +11,8 @@
             <Label FontSize="22" FontAttributes="Bold" Text="Book your table!" VerticalOptions="End" />
             <Label FontSize="22" Text="v1.0" VerticalOptions="End" />
         </HorizontalStackLayout>
-        <Label Text="This app will help you to manage your table in restaurant " />
+        <Label Text="This app will help you to manage your table in restaurant" />
+        <Label Text="Creators: Mesesan Daria-Maria and Maris Sorana" />
 
     </VerticalStackLayout>
 </ContentPage>
